<resources>
    <string name="app_name">LeLe</string>
    <string name="normal_video_time">1:34</string>
    <string name="normal_video_title">这个视频的标题</string>
    <string name="normal_author">张三</string>
    <string name="normal_view_time">666次观看</string>
    <string name="normal_update_time">02-20 10:22</string>
    <string name="app_browse">浏览模式</string>
    <string name="app_customer">客服</string>
    <string name="app_login">登录</string>
    <string name="app_id_hint">手机号/超星号</string>
    <string name="app_user_password_hint">密码</string>
    <string name="nav_home">首页</string>
    <string name="nav_message">消息</string>
    <string name="nav_note">笔记</string>
    <string name="nav_me">我</string>
    <string name="login_agree">我已阅读并同意学习通</string>
    <string name="login_agree_login_policy">《登录政策》</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="btn_login">登录</string>
    <string name="login_user_register">新用户注册</string>
    <string name="login_by_phone">手机号快捷登录</string>
    <string name="login_by_other">其他登录方式</string>
    <string name="login_agree_user_policy">《用户协议》</string>
    <string name="user_todo">代办</string>
    <string name="user_class">课程</string>
    <string name="user_notebook">笔记本</string>
    <string name="user_yun">云盘</string>
    <string name="user_group">小组</string>
    <string name="user_bookshelf">书架</string>
    <string name="user_setting">设置</string>
    <string name="title_home">首页</string>
    <string name="register_title">注册</string>
    <string name="phone_hint">手机号</string>
    <string name="code_hint">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="password_hint">密码要求8-16位，至少包含数字、字母、符号两种元素</string>
    <string name="next">下一步</string>
    <string name="app_register_set_password">设置密码</string>
    <string name="login_policy">登录政策</string>
    <string name="user_policy">用户协议</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="chat_send">发送</string>
</resources>