<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.qq.xuexitong.viewModel.ChatViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ChatActivity"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/rl_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen50">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/dimen20"
                android:layout_height="@dimen/dimen20"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen5"
                android:src="@drawable/black_back" />

            <TextView
                android:id="@+id/tv_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dimen10"
                android:text="@string/app_customer"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

        </RelativeLayout>


        <ScrollView
            android:id="@+id/sv_chat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@color/gray2">

            <RelativeLayout
                android:id="@+id/rv_chat_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/chat_text_background_left"
                        android:text="@{viewModel.data}"
                        android:textColor="@color/black"
                        android:padding="25px"
                        android:textSize="14sp" />

            </RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_chat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_text_here" />

            <Button
                android:id="@+id/btn_chat_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_send" />

        </LinearLayout>


    </LinearLayout>
</layout>