<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray2"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="20dp">

            <ImageView
                android:id="@+id/user_head"
                android:layout_width="100px"
                android:layout_height="100px"
                android:src="@drawable/head" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/user_head"
                android:text="登录/注册"
                android:textColor="@color/text_black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="60px"
                android:layout_height="60px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrowhead_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="20dp">

            <ImageView
                android:id="@+id/iv_todo"
                android:layout_width="60px"
                android:layout_height="60px"
                android:src="@drawable/user_todo" />

            <TextView
                android:id="@+id/user_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/iv_todo"
                android:text="@string/user_todo"
                android:textColor="@color/text_black"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="60px"
                android:layout_height="60px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrowhead_right" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/iv_class"
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:src="@drawable/user_class" />

                <TextView
                    android:id="@+id/user_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_class"
                    android:text="@string/user_class"
                    android:textColor="@color/text_black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrowhead_right" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_noteBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/iv_noteBook"
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:src="@drawable/user_notebook" />

                <TextView
                    android:id="@+id/user_noteBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_noteBook"
                    android:text="@string/user_notebook"
                    android:textColor="@color/text_black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrowhead_right" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_yun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/iv_yun"
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:src="@drawable/user_yun" />

                <TextView
                    android:id="@+id/user_yun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_yun"
                    android:text="@string/user_yun"
                    android:textColor="@color/text_black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrowhead_right" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/iv_group"
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:src="@drawable/user_group" />

                <TextView
                    android:id="@+id/user_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_group"
                    android:text="@string/user_group"
                    android:textColor="@color/text_black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrowhead_right" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_bookshelf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/iv_bookshelf"
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:src="@drawable/user_bookshelf" />

                <TextView
                    android:id="@+id/user_bookshelf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_bookshelf"
                    android:text="@string/user_bookshelf"
                    android:textColor="@color/text_black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrowhead_right" />


            </RelativeLayout>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/rl_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="20dp">

            <ImageView
                android:id="@+id/iv_setting"
                android:layout_width="60px"
                android:layout_height="60px"
                android:src="@drawable/user_setting" />

            <TextView
                android:id="@+id/user_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/iv_setting"
                android:text="@string/user_setting"
                android:textColor="@color/text_black"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="60px"
                android:layout_height="60px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrowhead_right" />


        </RelativeLayout>


    </LinearLayout>
</layout>